--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -4,9 +4,17 @@
 # https://github.com/codespell-project/actions-codespell
 # https://github.com/codespell-project/codespell
 name: codespell
-on: 
-# pull_request
+on:
+  workflow_call:
+    inputs:
+      from_ci:
+        type: boolean
+        required: false
+        default: true
+
   workflow_dispatch:
+
+# pull_request
 permissions: {}
 jobs:
   codespell:
