--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -65,3 +65,8 @@ jobs:
         with:
           name: earelease
           path: artifacts/
+      - name: Clear older runs
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh run list -L400 --json databaseId -q '.[].databaseId' | tail -n+10 | xargs -IID gh api "repos/$GITHUB_REPOSITORY/actions/runs/ID" -X DELETE || :
